Jacoco outofmemory